pilot/pkg/security/authz/builder/testdata/http/allow-nil-rule-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-none
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
